--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <h2>Calculadora de Média Aritmética</h2>
     <form id="mediaForm">
-        <label for="numero1">Número 1:</label>
+        <label for="numero1">100:</label>
         <input type="number" id="numero1" required><br><br>
 
-        <label for="numero2">Número 2:</label>
+        <label for="numero2">50</label>
         <input type="number" id="numero2" required><br><br>
 
-        <label for="numero3">Número 3:</label>
+        <label for="numero3">70</label>
         <input type="number" id="numero3" required><br><br>
 
         <button type="button" onclick="calcularMedia()">Calcular Média</button>
