--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <script>
         function calcularMedia() {
-            const numero1 = parseFloat(document.getElementById("numero1").value);
-            const numero2 = parseFloat(document.getElementById("numero2").value);
-            const numero3 = parseFloat(document.getElementById("numero3").value);
+            const numero1 = parseFloat(document.getElementById("100").value);
+            const numero2 = parseFloat(document.getElementById("50").value);
+            const numero3 = parseFloat(document.getElementById("70").value);
 
             const media = (numero1 + numero2 + numero3) / 3;
 
