--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <label for="numero2">50</label>
         <input type="number" id="numero2" required><br><br>
 
-        <label for="numero3">70</label>
-        <input type="number" id="numero3" required><br><br>
+        
 
         <button type="button" onclick="calcularMedia()">Calcular Média</button>
     </form>
@@ -26,9 +25,8 @@
         function calcularMedia() {
             const numero1 = parseFloat(document.getElementById("100").value);
             const numero2 = parseFloat(document.getElementById("50").value);
-            const numero3 = parseFloat(document.getElementById("70").value);
 
-            const media = (numero1 + numero2 + numero3) / 3;
+            const media = (numero1 + numero2 ) / 2;
 
             document.getElementById("resultado").innerText = `A média é: ${media.toFixed(2)}`;
         }
